corrected alignment of text and btn in payment

--- a/css/payment.css
+++ b/css/payment.css
@@ -9,6 +9,11 @@ a,
     transition: all 0.25s ease-in;
 }
 
+.m-t-lg{
+    display: flex;
+    justify-content: space-between;
+  }
+
 .input-group {
     width: 100%;
 }
@@ -179,6 +184,10 @@ label {
 .btn--form:focus,
 .btn--form:hover {
     background: #323232;
+}
+
+ul{
+    padding: 0%;
 }
 
 .signup__link {
